# orcd-cpu-thermals

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: AGENT_INSTRUCTIONS.md
cpu_thermals/: __init__.py  cli.py
cpu_thermals/backends/: README.md  __init__.py  lm_sensors.py  smctemp.py
cpu_thermals/output/: README.md  __init__.py  csv.py  table.py
examples/1-simple-terminal/: README.md  record-headless.sh  stream-csv-to-stdout.sh  watch-and-record.sh  watch-fast.sh  watch.sh
examples/1-simple-terminal/apptainer/: README.md  build.sh  cpu_thermals.def  run.sh
examples/2-mprime-stress/: README.md  run.sh
examples/2-mprime-stress/apptainer/: run.sh
tests/: fake_run.py  smoke.sh
